--- a/myconfig-client-app.properties
+++ b/myconfig-client-app.properties
@@ -1,4 +1,4 @@
 prop-4 = from app properties - default
 prop-6 = yes
-prop-3 = from app properties - default updated - DEVELOP
+prop-3 = from app properties - default updated - DEVELOP config-repo-sample
 tps = 50
