--- a/myconfig-client-app.properties
+++ b/myconfig-client-app.properties
@@ -1,4 +1,4 @@
-prop1 = 1 from app properties - default DEVELOP config-repo-sample - Erik
+prop1 = 1 from app properties - default DEVELOP config-repo-sample 
 prop2 = 2 from app properties - default DEVELOP config-repo-sample - Erik
-prop3 = 3 from app properties - default DEVELOP config-repo-sample - Erik
+prop3 = 3 from app properties - default DEVELOP config-repo-sample 
 prop4 = 4 from app properties - default DEVELOP config-repo-sample - Erik
